--- a/src/view/ImportWindow.mxml
+++ b/src/view/ImportWindow.mxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:TitleWindow xmlns:fx="http://ns.adobe.com/mxml/2009"
-		 xmlns:s="library://ns.adobe.com/flex/spark"
-		 xmlns:mx="library://ns.adobe.com/flex/mx"
-		 width="310" height="250" title="{LanguageProxy.getInstance().importTitle}"
-		 close="closeWindow()"
-		 >
+			   xmlns:s="library://ns.adobe.com/flex/spark"
+			   xmlns:mx="library://ns.adobe.com/flex/mx"
+			   width="310" height="250" title="{LanguageProxy.getInstance().importTitle}"
+			   close="closeWindow()"
+			   >
 	<fx:Script>
 		<![CDATA[
 			import control.LoadFLADataCommand;
@@ -54,17 +54,37 @@
 			}
 		]]>
 	</fx:Script>
+
+	<s:HGroup left="10" right="10" y="45" height="24" verticalAlign="middle">
+		<s:Line width="100%">
+			<s:stroke>
+				<s:SolidColorStroke color="0x000000" weight="1" caps="square"/>
+			</s:stroke>
+		</s:Line>
+		<s:Label left="10" height="24" text="Texture Setting" textAlign="left"
+				 verticalAlign="middle"/>
+		<s:Line width="100%">
+			<s:stroke>
+				<s:SolidColorStroke color="0x000000" weight="1" caps="square"/>
+			</s:stroke>
+		</s:Line>
+		
+	</s:HGroup>
 	<s:VGroup x="10" y="10" width="100" height="150" gap="6" horizontalAlign="right">
 		<s:Label width="100%" height="24" text="{LanguageProxy.getInstance().getItem(LanguageProxy.IMPORT_LABEL)}" textAlign="right" verticalAlign="middle"/>
+		<s:Spacer height="25"/>
+		
+
 		<s:Label width="100%" height="24" text="{LanguageProxy.getInstance().getItem(LanguageProxy.TEXTURE_SORT)}" textAlign="right" verticalAlign="middle"/>
 		<s:Label width="100%" height="24" text="{LanguageProxy.getInstance().getItem(LanguageProxy.TEXTURE_WIDTH)}" textAlign="right" verticalAlign="middle"/>
 		<s:Label width="100%" height="24" text="{LanguageProxy.getInstance().getItem(LanguageProxy.TEXTURE_PADDING)}" textAlign="right" verticalAlign="middle"/>
 	</s:VGroup>
-	<s:VGroup x="118" y="10" width="170" height="150" gap="6">
+	<s:VGroup x="118" y="10" width="170" gap="6">
 		<s:DropDownList width="100%" height="24" textAlign="right"
 						dataProvider="{dataImportAC}"
 						selectedIndex="@{ImportDataProxy.getInstance().dataImportID}"
 						/>
+		<s:Spacer height="25"/>
 		<s:DropDownList width="100%" height="24" textAlign="right"
 						dataProvider="{ImportDataProxy.getInstance().textureSortAC}"
 						enabled="{!ImportDataProxy.getInstance().isExportedSource}"
@@ -83,12 +103,18 @@
 						  value="@{ImportDataProxy.getInstance().texturePadding}"
 						  />
 	</s:VGroup>
-	<s:Button right="140" bottom="20" width="100" height="24" cornerRadius="0"
-			  label="{LanguageProxy.getInstance().getItem(LanguageProxy.OK)}" 
-			  click="importData()"
-			  />
-	<s:Button right="20" bottom="20" width="100" height="24" cornerRadius="0"
-			  label="{LanguageProxy.getInstance().getItem(LanguageProxy.CANCEL)}"
-			  click="closeWindow()"
-			  />
+
+	
+	<s:HGroup left="20" right="20" bottom="20" gap="20" horizontalAlign="center">
+		<s:Button width="100" height="24" cornerRadius="0"
+				  label="{LanguageProxy.getInstance().getItem(LanguageProxy.OK)}" 
+				  click="importData()"
+				  />
+		<s:Button width="100" height="24" cornerRadius="0"
+				  label="{LanguageProxy.getInstance().getItem(LanguageProxy.CANCEL)}"
+				  click="closeWindow()"
+				  />
+	</s:HGroup>
+
+	
 </s:TitleWindow>
