--- a/src/view/ControlUIsGroup.mxml
+++ b/src/view/ControlUIsGroup.mxml
@@ -2,7 +2,7 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		  xmlns:s="library://ns.adobe.com/flex/spark" 
 		  xmlns:mx="library://ns.adobe.com/flex/mx" 
-		  width="300"
+		  width="310"
 		  addedToStage="addedToStageHandler(event)"
 		  >
 	
@@ -25,6 +25,8 @@
 			
 			[Bindable]
 			private var movementBoneName:String = "";
+			
+			private var movementUpdated:Boolean;
 			
 			private function addedToStageHandler(event:Event):void{
 				
@@ -49,17 +51,21 @@
 				sliderDelay.addEventListener(Event.CHANGE, valueChangeHandler);
 				numDelay.addEventListener(Event.CHANGE, valueChangeHandler);
 				
-				MessageDispatcher.addEventListener(MessageDispatcher.LANGUAGE_CHANGE, onCommandHandler);
-				MessageDispatcher.addEventListener(MessageDispatcher.CHANGE_MOVEMENT_DATA, onCommandHandler);
-				MessageDispatcher.addEventListener(MessageDispatcher.CHANGE_MOVEMENT_BONE_DATA, onCommandHandler);
+				MessageDispatcher.addEventListener(MessageDispatcher.LANGUAGE_CHANGE, commandHandler);
+				MessageDispatcher.addEventListener(MessageDispatcher.CHANGE_MOVEMENT_DATA, commandHandler);
+				MessageDispatcher.addEventListener(MessageDispatcher.CHANGE_MOVEMENT_BONE_DATA, commandHandler);
 				
-				MessageDispatcher.addEventListener(MessageDispatcher.MOVEMENT_CHANGE, onCommandHandler);
-				MessageDispatcher.addEventListener(MessageDispatcher.MOVEMENT_START, onCommandHandler);
-				MessageDispatcher.addEventListener(MessageDispatcher.MOVEMENT_COMPLETE, onCommandHandler);
+				MessageDispatcher.addEventListener(MessageDispatcher.MOVEMENT_CHANGE, commandHandler);
+				MessageDispatcher.addEventListener(MessageDispatcher.MOVEMENT_START, commandHandler);
+				MessageDispatcher.addEventListener(MessageDispatcher.MOVEMENT_COMPLETE, commandHandler);
+				
+				MessageDispatcher.addEventListener(MessageDispatcher.UPDATE_MOVEMENT_DATA, commandHandler);
+				MessageDispatcher.addEventListener(MessageDispatcher.UPDATE_MOVEMENT_BONE_DATA, commandHandler);
+				MessageDispatcher.addEventListener(MessageDispatcher.UPDATE_BONE_PARENT, commandHandler);
 				
 			}
 			
-			private function onCommandHandler(_e:Message):void{
+			private function commandHandler(_e:Message):void{
 				switch(_e.type){
 					case MessageDispatcher.LANGUAGE_CHANGE:
 						updatePlayAndPauseBtn();
@@ -133,6 +139,11 @@
 					case MessageDispatcher.MOVEMENT_COMPLETE:
 						updatePlayAndPauseBtn();
 						break;
+					case MessageDispatcher.UPDATE_MOVEMENT_DATA:
+					case MessageDispatcher.UPDATE_MOVEMENT_BONE_DATA:
+					case MessageDispatcher.UPDATE_BONE_PARENT:
+						movementUpdated = !importDataProxy.armature.animation.isPlaying;
+						break;
 				}
 			}
 			
@@ -157,29 +168,21 @@
 						importDataProxy.animationDataProxy.loop = checkLoop.selected;
 						break;
 					case btnPlay:
-						//click 翻转了 selected
+						//翻转了 selected
 						if(importDataProxy.armature){
 							if(!btnPlay.selected){
 								importDataProxy.armature.animation.stop();
 							}else{
-								importDataProxy.armature.animation.play(importDataProxy.animationDataProxy.movementName);
+								if(movementUpdated){
+									importDataProxy.armature.animation.gotoAndPlay(importDataProxy.animationDataProxy.movementName);
+								}else{
+									importDataProxy.armature.animation.play();
+								}
 							}
 							updatePlayAndPauseBtn();
+							movementUpdated = false;
 						}
 						break;
-					/*
-					case btnPause:
-						//click 翻转了 selected
-						if(importDataProxy.armature){
-							if(!btnPause.selected){
-								importDataProxy.armature.animation.resume();
-							}else{
-								importDataProxy.armature.animation.pause();
-							}
-							updatePlayAndPauseBtn();
-						}
-						break;
-					*/
 					case sliderScale:
 						numScale.value = sliderScale.value;
 					case numScale:
@@ -198,94 +201,83 @@
 			private function updatePlayAndPauseBtn():void{
 				if(importDataProxy.armature){
 					btnPlay.enabled = true;
-					//btnPause.enabled = true;
 					if(importDataProxy.armature.animation.isPause){
 						btnPlay.label = languageProxy.playLabel;
-						//btnPause.label = languageProxy.resumeLabel;
 						btnPlay.selected = false;
-						//btnPause.selected = true;
 					}else if(importDataProxy.armature.animation.isComplete){
 						btnPlay.label = languageProxy.playLabel;
-						//btnPause.label = languageProxy.pauseLabel;
 						btnPlay.selected = false;
-						//btnPause.selected = false;
-						//btnPause.enabled = false;
 					}else{
 						btnPlay.label = languageProxy.stopLabel;
-						//btnPause.label = languageProxy.pauseLabel;
 						btnPlay.selected = true;
-						//btnPause.selected = false;
 					}
 				}else{
 					btnPlay.selected = false;
-					//btnPause.selected = false;
 					btnPlay.enabled = false;
-					//btnPause.enabled = false;
 					btnPlay.label = languageProxy.playLabel;
-					//btnPause.label = languageProxy.pauseLabel;
 				}
 			}
 		]]>
 	</fx:Script>
 	<s:VGroup width="100%" height="100%" gap="2">
-		<mx:Accordion width="300" height="155">
-			<s:NavigatorContent width="300" height="100%" label="{languageProxy.movementPanelTitle + movementName}">
-				<s:Label x="10" y="10" width="105" height="24" textAlign="right" verticalAlign="middle"
+		<mx:Accordion width="100%" height="155">
+			<s:NavigatorContent width="100%" height="100%" label="{languageProxy.movementPanelTitle + movementName}">
+				<s:Label x="10" y="10" width="110" height="24" textAlign="right" verticalAlign="middle"
 						 text="{languageProxy.movementFrameLabel}"
 						 />
 				
-				<s:Label x="10" y="40" width="105" height="24"  textAlign="right" verticalAlign="middle"
+				<s:Label x="10" y="40" width="110" height="24"  textAlign="right" verticalAlign="middle"
 						 text="{languageProxy.tweenFrameLabel}"
 						 />
 
-				<s:Label x="10" y="70" width="105" height="24"  textAlign="right" verticalAlign="middle"
+				<s:Label x="10" y="70" width="110" height="24"  textAlign="right" verticalAlign="middle"
 						 text="{languageProxy.keyFrameEaseLabel}"
 						 />
 				
 				
-				<s:HSlider id="sliderDurationTween" x="120" y="17" width="100"
+				<s:HSlider id="sliderDurationTween" x="130" y="17" width="100"
 						   minimum="0" maximum="100" snapInterval="1"
 						   />
-				<s:HSlider id="sliderDurationTo" x="120" y="47" width="100" 
+				<s:HSlider id="sliderDurationTo" x="130" y="47" width="100" 
 						   minimum="0" maximum="100" snapInterval="1"
 						   />
-				<s:CheckBox id="checkLoop" x="170" y="100" width="120" height="24" 
+				<s:CheckBox id="checkLoop" x="130" y="100" width="100" height="24" 
 							label="{languageProxy.movementLoopLabel}"
 							/>
-				<s:HSlider id="sliderTweenEasing" x="120" y="77" width="100"
+				<s:HSlider id="sliderTweenEasing" x="130" y="77" width="100"
 						   minimum="-1.1" maximum="2" snapInterval="0.05"
 						   />
-				<s:ToggleButton id="btnPlay" x="88" y="100" width="70" height="24"
+				<s:ToggleButton id="btnPlay" x="48" y="100" width="70" height="24"
 						  />
 				
-				<s:NumericStepper id="numDurationTween" x="230" y="10" width="60" height="24" cornerRadius="0" textAlign="right"
+				<s:NumericStepper id="numDurationTween" x="240" y="10" width="60" height="24" cornerRadius="0" textAlign="right"
 								  maximum="3000" minimum="0" snapInterval="1"
 								  />
 				
-				<s:NumericStepper id="numDurationTo" x="230" y="40" width="60" height="24" cornerRadius="0" textAlign="right"
+				<s:NumericStepper id="numDurationTo" x="240" y="40" width="60" height="24" cornerRadius="0" textAlign="right"
 								  maximum="3000" minimum="0" snapInterval="1"
 								  />
 
 			</s:NavigatorContent>
 		</mx:Accordion>
-		<mx:Accordion width="300" height="100%">
+		<mx:Accordion width="100%" height="100%">
 			<s:NavigatorContent width="100%" height="100%" label="{languageProxy.boneMovementPanelTitle + movementBoneName}">
-				<s:Label x="10" y="10" width="105" height="24" textAlign="right" verticalAlign="middle"
+				<s:Label x="10" y="10" width="110" height="24" textAlign="right" verticalAlign="middle"
 						 text="{languageProxy.boneTweenScaleLabel}"
 						 />
-				<s:Label x="10" y="40" width="105" height="24" textAlign="right" verticalAlign="middle"
+				<s:Label x="10" y="40" width="110" height="24" textAlign="right" verticalAlign="middle"
 						 text="{languageProxy.boneTweenDelayLabel}"
 						 />
-				<s:HSlider id="sliderScale" x="120" y="17" width="100"
+				<s:HSlider id="sliderScale" x="130" y="17" width="100"
 						   minimum="0" maximum="200" snapInterval="5"
 						   />
-				<s:HSlider id="sliderDelay" x="120" y="47" width="100"
+				<s:HSlider id="sliderDelay" x="130" y="47" width="100"
 						   minimum="-100" maximum="100" snapInterval="5"
 						   />
-				<s:NumericStepper id="numScale" x="230" y="10" width="60" height="24" cornerRadius="0" textAlign="right"
+				<s:NumericStepper id="numScale" x="240" y="10" width="60" height="24" cornerRadius="0" textAlign="right"
 								  maximum="1000" minimum="0" snapInterval="1"
 								  />
-				<s:NumericStepper id="numDelay" x="230" y="40" width="60" height="24" cornerRadius="0" textAlign="right"
+				<s:NumericStepper id="numDelay" x="240" y="40" width="60" height="24" cornerRadius="0" textAlign="right"
 								  maximum="100" minimum="-100" snapInterval="1"
 								  />
 			</s:NavigatorContent>
