--- a/src/view/ArmatureDisplayUIsGroup.mxml
+++ b/src/view/ArmatureDisplayUIsGroup.mxml
@@ -20,6 +20,8 @@
 			import model.ImportDataProxy;
 			import model.ShareObjectDataProxy;
 			
+			import utils.getPointTarget;
+			
 			private var importDataProxy:ImportDataProxy = ImportDataProxy.getInstance();
 			
 			private var armatureContainer:Sprite;
@@ -32,12 +34,11 @@
 			private var boneRolloverFilter:GlowFilter;
 			
 			private var isDragedArmature:Boolean;
-			private var isDragging:Boolean;
 			private var pointDragInBone:Point = new Point();
 			private var pointDragGlobal:Point = new Point();
 			private var pointScrollBarDrag:Point = new Point();
 			
-			private var pointHelp:Point;
+			private var pointHelp:Point = new Point();
 			
 			private var armatreArea:Rectangle;
 			
@@ -62,8 +63,8 @@
 				sliderScale.value = __viewScale;
 			}
 			
-			private function get armatureDisplay():DisplayObject{
-				return (importDataProxy.armature?importDataProxy.armature.display:null) as DisplayObject;
+			private function get armatureDisplay():DisplayObjectContainer{
+				return (importDataProxy.armature?importDataProxy.armature.display:null) as DisplayObjectContainer;
 			}
 			
 			private function addedToStageHandler(event:Event):void{
@@ -96,7 +97,7 @@
 				
 				armatureContainer.addEventListener(MouseEvent.ROLL_OVER, containerMouseHandler);
 				armatureContainer.addEventListener(MouseEvent.ROLL_OUT, containerMouseHandler);
-				armatureContainer.addEventListener(MouseEvent.MOUSE_OVER, containerMouseHandler);
+				armatureContainer.addEventListener(MouseEvent.MOUSE_MOVE, containerMouseHandler);
 				armatureContainer.addEventListener(MouseEvent.MOUSE_DOWN, containerMouseHandler);
 				armatureContainer.addEventListener(MouseEvent.MOUSE_WHEEL, containerMouseHandler);
 				armatureContainer.addEventListener(MouseEvent.DOUBLE_CLICK, containerMouseHandler);
@@ -140,6 +141,7 @@
 						break;
 					case MessageDispatcher.CHANGE_ARMATURE_DATA:
 						isDragedArmature = false;
+						armatreArea = null;
 						//armatureContainer.removeChildren();
 						var _length:uint = armatureContainer.numChildren;
 						for(var _i:int = _length - 1;_i >= 0;_i --){
@@ -180,45 +182,48 @@
 					var _rect:Rectangle = _display.getRect(_display);
 					
 					if(armatreArea){
-						armatreArea.x = Math.min(armatreArea.x, _rect.x);
-						armatreArea.y = Math.min(armatreArea.y, _rect.y);
-						armatreArea.width = Math.max(armatreArea.width, _rect.width);
-						armatreArea.height = Math.max(armatreArea.height, _rect.height);
+						armatreArea.left = Math.min(armatreArea.left, _rect.left);
+						armatreArea.top = Math.min(armatreArea.top, _rect.top);
+						armatreArea.right = Math.max(armatreArea.right, _rect.right);
+						armatreArea.bottom = Math.max(armatreArea.bottom, _rect.bottom);
 					}else{
 						armatreArea = _rect;
 					}
 					
-					
+					var _x:int = armatreArea.x * __viewScale;
+					var _y:int = armatreArea.y * __viewScale;
 					var _width:uint = armatreArea.width * __viewScale;
 					var _height:uint = armatreArea.height * __viewScale;
+					
 					var _smallW:Boolean;
 					var _smallH:Boolean;
 					if(_width < width){
 						_smallW = true;
-						_display.x = (width - _width) * 0.5 - armatreArea.x * __viewScale;
+						_display.x = (width - _width) * 0.5 - _x;
 					}else{
 						_width += 200;
-						_display.x = 100 - armatreArea.x * __viewScale;
+						_display.x = 100 - _x;
 					}
 					if(_height < height){
 						_smallH = true;
-						_display.y = (height - _height) * 0.5 - armatreArea.y * __viewScale;
+						_display.y = (height - _height) * 0.5 - _y;
 					}else{
 						_height += 120;
-						_display.y = 60 - armatreArea.y * __viewScale;
+						_display.y = 60 - _y;
 					}
+					
+					
 					if(_smallW && _smallH){
 						isDragedArmature = false;
 					}
+					
 					lineX.x = _display.x;
 					lineY.y = _display.y;
 					
-					bgShape.width = Math.max(_width, width - 40);
-					bgShape.height = Math.max(_height, height - 40);
-					viewContainerGroup.width = bgShape.width;
-					viewContainerGroup.height = bgShape.height;
+					bgShape.width = viewContainerGroup.width = Math.max(_width, width);
+					bgShape.height = viewContainerGroup.height = Math.max(_height, height);
 					
-					if(isDragging){
+					if(isMouseDown){
 						scrollerViewer.horizontalScrollBar.value = pointDragGlobal.x - stage.mouseX + pointScrollBarDrag.x;
 						scrollerViewer.verticalScrollBar.value = pointDragGlobal.y - stage.mouseY + pointScrollBarDrag.y;
 					}else if(!isDragedArmature){
@@ -226,6 +231,7 @@
 						scrollerViewer.verticalScrollBar.value = (_height - height) * 0.5;
 					}
 					
+					updateOverAndOut();
 					//updateBoneLink();
 				}
 			}
@@ -234,47 +240,35 @@
 				isDragedArmature = true;
 			}
 			
+			private var isMouseIn:Boolean;
+			private var isMouseDown:Boolean;
+			
 			private function containerMouseHandler(_e:MouseEvent):void{
-				var _display:Object = armatureDisplay;
+				var _display:DisplayObjectContainer = armatureDisplay;
 				if(!_display){
 					return;
 				}
+				var _mouseTarget:DisplayObject;
 				switch(_e.type){
 					case MouseEvent.ROLL_OVER:
-						//
+						isMouseIn = true;
 						break;
 					case MouseEvent.ROLL_OUT:
-						//鼠标没按下的时候恢复正常
-						if(boneDisplayRollOver){
-							boneDisplayRollOver.filters = null;
-							boneDisplayRollOver = null;
-						}
+						isMouseIn = false;
 						break;
-					case MouseEvent.MOUSE_OVER:
-						if(boneDisplayRollOver){
-							boneDisplayRollOver.filters = null;
-							boneDisplayRollOver = null;
-						}
-						if(_e.target == armatureContainer){
-							//进入container 或 从bone出来
-							//鼠标是否按下
-						}else if(_e.target != boneDisplaySelected){
-							if(boneDisplaySelected && _e.buttonDown){
-								if(!checkBoneParent(boneDisplaySelected, _e.target)){
-									return;
-								}
-							}
-							boneDisplayRollOver = _e.target;
-							boneDisplayRollOver.filters = [boneRolloverFilter];
-						}
+					case MouseEvent.MOUSE_MOVE:
+						/*
+						armatureContainer.addChild(link);
+						link.visible = true;
+						updateBoneLink();*/
 						break;
 					case MouseEvent.MOUSE_DOWN:
+						isMouseDown = true;
 						Mouse.cursor = MouseCursor.HAND;
 						if(stage){
 							stage.addEventListener(MouseEvent.MOUSE_UP, containerMouseHandler);
 						}
 						isDragedArmature = true;
-						isDragging = true;
 						pointDragGlobal.x = stage.mouseX;
 						pointDragGlobal.y = stage.mouseY;
 						pointScrollBarDrag.x = scrollerViewer.horizontalScrollBar.value;
@@ -287,17 +281,16 @@
 							
 							//pointStart.x = boneDisplaySelected.mouseX;
 							//pointStart.y = boneDisplaySelected.mouseY;
-							//armatureContainer.addEventListener(MouseEvent.MOUSE_MOVE, containerMouseHandler);
 						}
 						break;
 					case MouseEvent.MOUSE_UP:
+						isMouseDown = false;
 						Mouse.cursor = MouseCursor.AUTO;
 						if(stage){
 							stage.removeEventListener(MouseEvent.MOUSE_UP, containerMouseHandler);
 						}
-						isDragging = false;
 						
-						/*armatureContainer.removeEventListener(MouseEvent.MOUSE_MOVE, containerMouseHandler);
+						/*
 						link.visible = false;
 						if(boneDisplaySelected && boneDisplayRollOver && _e.target == boneDisplayRollOver){
 							boneAddToParent();
@@ -305,12 +298,6 @@
 						break;
 					case MouseEvent.MOUSE_WHEEL:
 						_e.delta > 0?(viewScale += 0.2):(viewScale -= 0.2);
-						break;
-					case MouseEvent.MOUSE_MOVE:
-						/*armatureContainer.removeEventListener(MouseEvent.MOUSE_MOVE, containerMouseHandler);
-						armatureContainer.addChild(link);
-						link.visible = true;
-						updateBoneLink();*/
 						break;
 					case MouseEvent.DOUBLE_CLICK:
 						isDragedArmature = false;
@@ -349,6 +336,42 @@
 					importDataProxy.armature.addBone(_bone, _boneName, _boneData.parent);
 					changeRenderMovement(importDataProxy.animationDataProxy.movementName);
 				}
+			}
+			
+			private function updateOverAndOut():void{
+				var _display:DisplayObjectContainer = armatureDisplay;
+				if(isMouseIn){
+					pointHelp.x = _display.mouseX;
+					pointHelp.y = _display.mouseY;
+					
+					var _mouseTarget:DisplayObject = getPointTarget(_display, pointHelp, 1);
+					if(_mouseTarget){
+						if(_mouseTarget != boneDisplaySelected){
+							if(boneDisplayRollOver){
+								boneDisplayRollOver.filters = null;
+								boneDisplayRollOver = null;
+							}
+							/*if(boneDisplaySelected && isMouseDown){
+							if(!checkBoneParent(boneDisplaySelected, _mouseTarget)){
+							return;
+							}
+							}*/
+							boneDisplayRollOver = _mouseTarget;
+							boneDisplayRollOver.filters = [boneRolloverFilter];
+						}
+					}else if(boneDisplayRollOver){
+						boneDisplayRollOver.filters = null;
+						boneDisplayRollOver = null;
+					}
+				}else if(boneDisplayRollOver){
+					boneDisplayRollOver.filters = null;
+					boneDisplayRollOver = null;
+				}
+				
+				/*
+				armatureContainer.addChild(link);
+				link.visible = true;
+				updateBoneLink();*/
 			}
 			
 			private function updateBoneLink():void{
