fix get bone parent bug add auto LanguageCode

--- a/src/view/ControlUIsGroup.mxml
+++ b/src/view/ControlUIsGroup.mxml
@@ -96,7 +96,8 @@
 							sliderDurationTween.enabled = true;
 							checkLoop.selected = importDataProxy.animationDataProxy.loop;
 							checkLoop.enabled = true;
-							//numKeyFrameEase.value = sliderTweenEasing.value = importDataProxy.animationDataProxy.tweenEasing;
+							//numKeyFrameEase.value = 
+							sliderTweenEasing.value = importDataProxy.animationDataProxy.tweenEasing;
 							sliderTweenEasing.enabled = true;
 							//numKeyFrameEase.enabled = true;
 						}
