translate some comments to English
translate some comments to English

--- a/src/view/ControlUIsGroup.mxml
+++ b/src/view/ControlUIsGroup.mxml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		  xmlns:s="library://ns.adobe.com/flex/spark" 
 		  xmlns:mx="library://ns.adobe.com/flex/mx" 
@@ -170,7 +170,6 @@
 						importDataProxy.animationDataProxy.tweenEasing = sliderTweenEasing.value;
 						break;
 					case btnPlay:
-						//翻转了 selected
 						if(importDataProxy.armature){
 							if(!btnPlay.selected){
 								importDataProxy.armature.animation.stop();
